Fixed single long word break in post title and body.

--- a/react-app/src/components/Posts/PostDetailPage/PostDetailPage.css
+++ b/react-app/src/components/Posts/PostDetailPage/PostDetailPage.css
@@ -10,11 +10,13 @@
 .post-detail-title h1 {
     line-height: 40px;
     margin: 0;
+    word-break: break-word;
 }
 
 .post-detail-body {
     line-height: 24px;
     margin: 20px 0 40px 0;
+    word-break: break-word;
 }
 
 .post-detail-body p {
